Use valueOf factory methods instead of constructors (which were deprecated in Java 9) to create primitive wrapper objects.